drrx/fixtures/invalid/invalid-root-indented.tree.drrx
  .                       # EXPECTED ERROR: SP.06 root must start at column 1
